default/objects/TextBom__c/TextBom__c.object-meta.xml
<CustomObject>
    <label>TextBom</label>
    <nameField>
        <displayFormat>TBOM-{0000000}</displayFormat>
        <label>TextBom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TextBoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>