default/objects/TextBom__c/fields/Bom_Content__c.field-meta.xml
<CustomField>
    <fullName>Bom_Content__c</fullName>
    <label>Bom Content</label>
    <length>120000</length>
    <type>Html</type>
</CustomField>