default/objects/TextBom__c/fields/Characteristic_Description__c.field-meta.xml
<CustomField>
    <fullName>Characteristic_Description__c</fullName>
    <label>Characteristic Description</label>
    <type>TextArea</type>
</CustomField>