default/objects/TextBom__c/fields/Characteristic_No__c.field-meta.xml
<CustomField>
    <fullName>Characteristic_No__c</fullName>
    <description>Product Attribute</description>
    <label>Characteristic No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>