default/objects/TextBom__c/fields/Characteristic_Value__c.field-meta.xml
<CustomField>
    <fullName>Characteristic_Value__c</fullName>
    <description>Attribute value</description>
    <label>Characteristic Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>