default/objects/TextBom__c/fields/Dependency_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Name__c</fullName>
    <description>Another Product Code, Considered as SAP Primary Key on this table, unique for entire BOM records.</description>
    <label>Dependency Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>