default/objects/TextBom__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Product FG Code</description>
    <inlineHelpText>Product FG Code</inlineHelpText>
    <label>Material</label>
    <length>20</length>
    <type>Text</type>
</CustomField>