default/objects/TextBom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Material__c</columns>
    <columns>Dependency_Name__c</columns>
    <columns>Characteristic_No__c</columns>
    <columns>Characteristic_Value__c</columns>
    <columns>Characteristic_Description__c</columns>
    <columns>Bom_Content__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>